# astock

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/astock/: cli.py
src/astock.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/astock/app/: __init__.py  settings.py
src/astock/connectors/: __init__.py  rest_client.py
src/astock/factor_lab/: __init__.py  discovery.py  factor_eval.py  ic.py  loop.py  models.py  panel.py  service.py  stability.py
src/astock/logic_pool/: __init__.py  defaults.py  executor.py  models.py  registry.py
src/astock/selection/: __init__.py  regime.py  service.py
src/astock/storage/: __init__.py  duckdb.py
src/astock/validation/: __init__.py  models.py  service.py
