[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astock"
version = "0.1.0"
description = "Independent A-share stock logic research and selection engine consuming aks-mcp"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "astock" }]
dependencies = [
  "httpx>=0.28.1",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "polars>=1.12.0",
  "duckdb>=1.1.3",
  "sqlalchemy>=2.0.35",
  "typer>=0.15.1",
  "rich>=13.9.4",
  "python-dateutil>=2.9.0.post0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.2",
]

[project.scripts]
astock = "astock.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
